/**!
 * Copyright (c) Streamlit Inc. (2018-2022) Snowflake Inc. (2022)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

import "streamlit/proto/LabelVisibilityMessage.proto";

message TextArea {
  string id = 1;
  string label = 2;
  string default = 3;
  uint32 height = 4;
  uint32 max_chars = 5;
  string help = 6;
  string form_id = 7;
  string value = 8;
  bool set_value = 9;
  string placeholder = 10;
  bool disabled = 11;
  LabelVisibilityMessage label_visibility = 12;
}
