/**!
 * Copyright (c) Streamlit Inc. (2018-2022) Snowflake Inc. (2022)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

import "streamlit/proto/LabelVisibilityMessage.proto";

message TimeInput {
  string id = 1;
  string label = 2;
  string default = 3;
  string help = 4;
  string form_id = 5;
  string value = 6;
  bool set_value = 7;
  bool disabled = 8;
  LabelVisibilityMessage label_visibility = 9;
  int64 step = 10;
}
